--- a/.templates/node/editor.tsx.hbs
+++ b/.templates/node/editor.tsx.hbs
@@ -2,6 +2,7 @@ import { zodResolver } from '@hookform/resolvers/zod';
 import { useAtom } from 'jotai';
 import { type FC } from 'react';
 import { useForm } from 'react-hook-form';
+import { merge } from 'remeda';
 
 import { EditGridFields } from '#/features/nodes/common';
 import { Button } from '#/features/ui/button';
@@ -17,14 +18,14 @@ import {
 import { Input } from '#/features/ui/input';
 
 import { NodePropertyEditorProps } from '../node.types';
-import { type {{pascalCase name}}State, schema } from './data';
+import { type {{pascalCase name}}State, defaultState, schema } from './data';
 import { nodeStateAtomFamily } from './store';
 
 export const PropertyEditor: FC<NodePropertyEditorProps> = ({ id }) => {
   const [state, setState] = useAtom(nodeStateAtomFamily(id));
   const form = useForm<{{pascalCase name}}State>({
     resolver: zodResolver(schema),
-    values: state,
+    values: merge(defaultState, state),
   });
 
   return (
