--- a/.templates/node/data.ts.hbs
+++ b/.templates/node/data.ts.hbs
@@ -1,15 +1,15 @@
 import * as z from 'zod';
 
-import { gridSchema } from '../common';
+import { gridSchema } from '#/features/nodes/common/data';
 export const schema = gridSchema.extend({
   someProperty: z.string().optional(),
 });
 export type {{pascalCase name}}State = z.infer<typeof schema>;
 export const defaultState: {{pascalCase name}}State = {
-  rowStart: 0,
-  rowEnd: 10,
-  columnStart: 0,
-  columnEnd: 14,
+  rowStart: 4,
+  rowEnd: 5,
+  columnStart: 2,
+  columnEnd: 3,
   someProperty: 'some value',
 };
 export const childrenTypes = [] as const;
